<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/root"
        android:padding="3dp">

        <ImageView
            android:id="@+id/Automatic"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/auto_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/auto"/>


        <ImageView
            android:id="@+id/Orange"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/orange_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/orange_image_desc"/>
        <ImageView
            android:id="@+id/Red"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/red_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/red_image_desc"/>

        <ImageView
            android:id="@+id/Green"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/green_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/Green_image_desc"/>

        <ImageView
            android:id="@+id/Blue"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/blue_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/blue_image_desc"/>

        <ImageView
            android:id="@+id/Purple"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/purple_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/purple_image_desc"/>

        <ImageView
            android:id="@+id/Sharingan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="3dp"
            android:src="@mipmap/sharingan_thumb"
            android:onClick="changeAssets"
            android:contentDescription="@string/sharingan_image_desc"/>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</HorizontalScrollView>